--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,38 @@ img {
 }
 
 *, *:after, *:before {
-	-webkit-transition: all 0.7s;
-	-moz-transition: all 0.7s;
-	-o-transition: all 0.7s;
-	transition: all 0.7s;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+*::-webkit-input-placeholder {
+	color: #afb8bf;
+	opacity: 1; }
+
+*:-moz-placeholder {
+	color: #afb8bf;
+	opacity: 1; }
+
+*::-moz-placeholder {
+	color: #afb8bf;
+	opacity: 1; }
+
+*:-ms-input-placeholder {
+	color: #afb8bf;
+	opacity: 1; }
+
+body input:focus:required:invalid,
+body textarea:focus:required:invalid {
+	color: #afb8bf; }
+
+body input:required:valid,
+body textarea:required:valid {
+	color: #afb8bf; }
+
+body {
+	margin: 0;
 }
 
 section, div {
@@ -107,7 +135,7 @@ header {
 	border-bottom: 1px solid #e5edee;
 	background: rgba(255,255,255,0.9);
 	width: 100%;
-	height: 100px;
+	/*height: 100px;*/
 	z-index: 9;
 }
 
@@ -147,7 +175,7 @@ header .col-menu ul li {
 header .col-menu ul li a {
 	font-size: 18px;
 	color: #44474c;
-	padding: 0 35px;
+	/*padding: 0 35px;*/
 	height: 100%;
 	display: table-cell;
 	vertical-align: middle;
@@ -168,7 +196,7 @@ header .col-menu ul li a {
 }
 
 header .col-menu ul li ul {
-	display: none;
+	/*display: none;*/
 	height: auto;
 	position: absolute;
 	top: 100%;
