--- a/css/footer.css
+++ b/css/footer.css
@@ -88,9 +88,11 @@ footer {
         color: #9160f0;
         margin: 0;
         font-weight: bold; }
-    footer .payment-footer .payment img {
-      display: block;
-      margin: auto; }
+    footer .payment-footer .payment {
+      padding: 0 10px 10px; }
+      footer .payment-footer .payment img {
+        display: block;
+        margin: auto; }
     footer .payment-footer ul {
       display: none;
       margin: 0;
@@ -132,11 +134,50 @@ footer {
       footer .bottom-line .footer-column img {
         width: 80px;
         height: auto; }
+  footer .mobile-bottom-line {
+    display: none;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: #fff;
+    z-index: 20; }
+    footer .mobile-bottom-line .col-6 {
+      padding: 0 7px; }
+    footer .mobile-bottom-line .footer-column {
+      padding: 15px 0;
+      text-align: center; }
+      footer .mobile-bottom-line .footer-column a {
+        display: inline-block;
+        position: relative;
+        color: #374652;
+        text-decoration: none;
+        font-size: 16px;
+        padding-right: 28px; }
+      footer .mobile-bottom-line .footer-column.right-column {
+        border-right: 1px solid #d4dade; }
+        footer .mobile-bottom-line .footer-column.right-column a:before {
+          content: '';
+          display: inline-block;
+          background-image: url("../img/whats_app.png");
+          width: 20px;
+          height: 20px;
+          position: absolute;
+          right: 0;
+          top: 1px; }
+      footer .mobile-bottom-line .footer-column.left-column a:before {
+        content: '';
+        display: inline-block;
+        background-image: url("../img/phone_call.png");
+        width: 22px;
+        height: 22px;
+        position: absolute;
+        right: 0;
+        top: 1px; }
 
 .top {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
+  position: fixed;
+  bottom: 80px;
+  right: 40px;
   background: -webkit-gradient(linear, left top, right top, from(#bc6de5), to(#9e4cdc));
   background: -webkit-linear-gradient(left, #bc6de5, #9e4cdc);
   background: -o-linear-gradient(left, #bc6de5, #9e4cdc);
@@ -145,7 +186,7 @@ footer {
   -webkit-border-radius: 10em;
           border-radius: 10em;
   color: #fff;
-  font-size: 26px;
+  font-size: 14px;
   width: 50px;
   height: 50px;
   text-align: center;
@@ -153,4 +194,377 @@ footer {
   cursor: pointer;
   -webkit-transition: all .3s ease;
   -o-transition: all .3s ease;
-  transition: all .3s ease; }
+  transition: all .3s ease;
+  opacity: 0; }
+  .top.active {
+    opacity: 1; }
+
+/*==========  Desktop First  ==========*/
+@media only screen and (max-width: 1440px) {
+  header .bottom-line .col-menu {
+    width: 48%; }
+  .section-main .double-section .left-block .carousel-wrap-reviews {
+    max-width: 95%; }
+    .section-main .double-section .left-block .carousel-wrap-reviews .carousel-title {
+      margin-bottom: 0; }
+    .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews:before {
+      top: -20px;
+      left: 55px; } }
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width: 1280px) {
+  header .bottom-line .col-menu {
+    width: 43%; }
+  .section-main .carousel-wrap-mobile .carousel-top {
+    overflow: hidden; }
+    .section-main .carousel-wrap-mobile .carousel-top ul {
+      float: left;
+      width: auto; }
+  .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews:before {
+    top: 2px;
+    left: 45px; }
+  .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item {
+    padding: 80px 25px; }
+    .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item p {
+      font-size: 15px; }
+    .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item span {
+      font-size: 18px; }
+  .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .owl-dots {
+    bottom: 30px; }
+  footer .widget {
+    max-width: 50%;
+    float: right; } }
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 1024px) {
+  .section-main .banner-wrap .container .banner-block h1 {
+    font-size: 60px; }
+  .section-main .banner-wrap .container .banner-block h2 {
+    font-size: 38px; }
+  .section-main .banner-wrap .container .banner-block ul li {
+    font-size: 16px; }
+  .section-main .carousel-wrap-mobile {
+    margin-bottom: 100px;
+    border-bottom: 3px solid #d9d9d9; }
+    .section-main .carousel-wrap-mobile .tab-content {
+      margin-bottom: 50px; }
+      .section-main .carousel-wrap-mobile .tab-content .owl-carousel .owl-nav {
+        bottom: -100px;
+        width: 100px;
+        left: 50%;
+        margin-left: -50px; }
+        .section-main .carousel-wrap-mobile .tab-content .owl-carousel .owl-nav button.owl-next {
+          padding-right: 0 !important; }
+          .section-main .carousel-wrap-mobile .tab-content .owl-carousel .owl-nav button.owl-next .btn-text {
+            display: none; }
+        .section-main .carousel-wrap-mobile .tab-content .owl-carousel .owl-nav button.owl-prev {
+          left: 10px; }
+  .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews:before {
+    top: 35px;
+    left: 35px;
+    -webkit-background-size: cover;
+            background-size: cover;
+    width: 50px;
+    height: 40px; }
+  .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .owl-dots {
+    bottom: 50px; } }
+
+/* Small Devices, Tablets */
+@media only screen and (max-width: 768px) {
+  header .top-line {
+    display: none; }
+  .section-main {
+    padding-top: 66px; }
+    .section-main .container-fluid {
+      padding: 0; }
+      .section-main .container-fluid .col-md-12 {
+        padding: 0; }
+      .section-main .container-fluid.brand-wrap .brand-block ul li {
+        display: inline-block;
+        width: 32%;
+        vertical-align: top;
+        position: relative; }
+        .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(1) {
+          border-right: none;
+          padding-right: 0; }
+          .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(1):after {
+            content: '';
+            display: block;
+            height: 1px;
+            width: 113%;
+            background-color: #d4dade;
+            position: absolute;
+            bottom: 0;
+            right: -10px; }
+        .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(2) {
+          border-right: 1px solid #d4dade; }
+          .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(2):after {
+            content: '';
+            display: block;
+            height: 1px;
+            width: 104%;
+            background-color: #d4dade;
+            position: absolute;
+            bottom: 0;
+            right: 0; }
+        .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(3) {
+          border-right: 1px solid #d4dade;
+          padding-left: 0; }
+          .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(3):after {
+            content: '';
+            display: block;
+            height: 1px;
+            width: 100%;
+            background-color: #d4dade;
+            position: absolute;
+            bottom: 0;
+            left: 0; }
+        .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(4) {
+          border-right: none;
+          padding-right: 0; }
+        .section-main .container-fluid.brand-wrap .brand-block ul li:nth-child(6) {
+          border-left: none;
+          padding-left: 0; }
+    .section-main .carousel-wrap-mobile .carousel-top {
+      margin-bottom: 45px; }
+      .section-main .carousel-wrap-mobile .carousel-top ul {
+        width: 100%; }
+        .section-main .carousel-wrap-mobile .carousel-top ul li {
+          padding: 0;
+          margin: 0; }
+    .section-main .double-section .left-block {
+      float: none;
+      max-width: 100%; }
+      .section-main .double-section .left-block .carousel-wrap-reviews {
+        max-width: 90%; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-title {
+          margin-bottom: 15px; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews:before {
+          top: -21px;
+          left: 57px;
+          width: 56px;
+          height: 46px; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item {
+          padding: 80px 70px; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .owl-dots {
+          bottom: 0; }
+    .section-main .double-section .right-block {
+      float: none;
+      max-width: 100%;
+      text-align: center; }
+      .section-main .double-section .right-block .content-wrapper h3 {
+        padding-top: 0;
+        text-align: center; }
+  footer .top-line .payment-wrapper {
+    padding: 0; }
+  footer .bottom-line {
+    border-top: none;
+    margin-bottom: 54px; }
+    footer .bottom-line .column-center-wrap {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      height: 100%;
+      margin: 7px 0; }
+      footer .bottom-line .column-center-wrap .column-center {
+        margin: auto; }
+  footer .mobile-bottom-line {
+    display: block; } }
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 480px) {
+  .section-main .banner-wrap {
+    background-image: url("../img/main_banner-mob.jpg");
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse; }
+    .section-main .banner-wrap .container {
+      margin: 0 auto; }
+      .section-main .banner-wrap .container .col-md-12 {
+        padding: 0 10px; }
+      .section-main .banner-wrap .container .banner-block {
+        text-align: center; }
+        .section-main .banner-wrap .container .banner-block h1 {
+          font-size: 48px;
+          text-align: center; }
+        .section-main .banner-wrap .container .banner-block h2 {
+          font-size: 23px;
+          text-align: center; }
+        .section-main .banner-wrap .container .banner-block ul li {
+          display: inline-block;
+          width: 49%;
+          vertical-align: top;
+          text-align: right;
+          font-size: 14px; }
+        .section-main .banner-wrap .container .banner-block a {
+          display: none; }
+  .section-main .brand-wrap .brand-block ul li {
+    padding: 5px; }
+  .section-main .carousel-wrap-mobile .tabs ul li {
+    margin: 0;
+    padding: 0; }
+    .section-main .carousel-wrap-mobile .tabs ul li span svg {
+      width: 40px;
+      height: 40px; }
+    .section-main .carousel-wrap-mobile .tabs ul li span span {
+      font-size: 15px; }
+  .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item {
+    margin: 25px 5px 0 5px; }
+    .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item .carousel-content .top-line {
+      width: 100%; }
+      .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item .carousel-content .top-line h3, .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item .carousel-content .top-line span.old-price, .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item .carousel-content .top-line span.price {
+        font-size: 14px; }
+    .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item .carousel-image .label-image1, .section-main .carousel-wrap-mobile .carousel-mobile .carousel-mobile-item .carousel-image .label-image2 {
+      -webkit-background-size: contain;
+              background-size: contain;
+      width: 60px; }
+  .section-main .double-section .left-block {
+    min-height: 450px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .section-main .double-section .left-block .carousel-wrap-reviews {
+      max-width: 100%;
+      padding: 0 15px;
+      margin: 10px 0 0 0; }
+      .section-main .double-section .left-block .carousel-wrap-reviews .carousel-title h3 {
+        font-size: 28px;
+        text-align: center; }
+      .section-main .double-section .left-block .carousel-wrap-reviews .carousel-title .quotes {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        white-space: nowrap;
+        margin-top: 30px; }
+      .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews {
+        background-image: none !important;
+        min-height: 0; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews:before {
+          content: none; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item {
+          padding: 0;
+          text-align: center; }
+          .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item p {
+            text-align: center; }
+          .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .carousel-reviews-item span {
+            float: none; }
+        .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .owl-dots {
+          bottom: -40px; }
+  .section-main .double-section .right-block .content-wrapper h3 {
+    padding-top: 10px; }
+  .section-main .double-section .right-block .content-wrapper ul li {
+    display: inline-block;
+    width: 49%;
+    vertical-align: top;
+    position: relative;
+    padding: 5px; }
+    .section-main .double-section .right-block .content-wrapper ul li:after {
+      content: '';
+      display: block;
+      height: 1px;
+      width: 100%;
+      background-color: #d4dade;
+      position: absolute;
+      bottom: 0;
+      right: 0; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(1):after {
+      width: 103%; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(2) {
+      border-right: 1px solid #d4dade; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(3):after {
+      content: none; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(4) {
+      border-right: 1px solid #d4dade; }
+      .section-main .double-section .right-block .content-wrapper ul li:nth-child(4):after {
+        content: none; }
+  footer .top-line .payment-wrapper {
+    background-color: #e9edf0; }
+    footer .top-line .payment-wrapper .payment-footer {
+      margin-top: 10px; }
+  footer .top-line .widget:not(.widget_contacts) {
+    display: none; }
+  footer .top-line .widget.widget_contacts {
+    max-width: 100%;
+    float: none;
+    padding: 0;
+    margin-top: 15px; }
+    footer .top-line .widget.widget_contacts h2 {
+      display: none; }
+    footer .top-line .widget.widget_contacts ul {
+      padding: 0; }
+      footer .top-line .widget.widget_contacts ul li {
+        width: 49%;
+        vertical-align: top;
+        display: inline-block; }
+        footer .top-line .widget.widget_contacts ul li span {
+          padding-right: 30px;
+          font-size: 13px; }
+        footer .top-line .widget.widget_contacts ul li.clock_footer {
+          display: none; }
+      footer .top-line .widget.widget_contacts ul:before {
+        content: none; }
+  footer .widget {
+    max-width: 100%; }
+  footer .payment-footer ul {
+    display: block; }
+  footer .bottom-line .footer-column p, footer .bottom-line .footer-column a {
+    font-size: 12px; }
+  footer .bottom-line .footer-column img {
+    width: 70px; }
+  footer .container-fluid .footer-bottom-line .footer-column, footer .container-fluid .footer-bottom-line p {
+    text-align: center; }
+  .top {
+    display: none; } }
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width: 320px) {
+  .section-main .banner-wrap {
+    min-height: 350px;
+    margin: 0; }
+    .section-main .banner-wrap .container .banner-block .button {
+      margin-bottom: 10px; }
+      .section-main .banner-wrap .container .banner-block .button.btn-left {
+        margin: 0; }
+    .section-main .banner-wrap .container .banner-block h1 {
+      font-size: 40px; }
+    .section-main .banner-wrap .container .banner-block h2 {
+      font-size: 20px; }
+    .section-main .banner-wrap .container .banner-block ul li {
+      font-size: 13px; }
+      .section-main .banner-wrap .container .banner-block ul li .far {
+        font-size: 20px; }
+  .section-main .double-section .left-block .carousel-wrap-reviews .carousel-reviews .owl-dots {
+    right: 50px; }
+  footer .bottom-line .col-6 {
+    padding: 0 5px; } }
+
+/*==========  Mobile First  ==========*/
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+  /**/ }
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width: 480px) {
+  /**/ }
+
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
+  /**/ }
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+  /**/ }
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 1200px) {
+  /**/ }
