--- a/css/index.css
+++ b/css/index.css
@@ -686,18 +686,20 @@
       width: 100%;
       background-color: #d4dade;
       position: absolute;
-      bottom: 0;
-      right: 0; }
-    .section-main .double-section .right-block .content-wrapper ul li:nth-child(1):after {
-      width: 103%; }
-    .section-main .double-section .right-block .content-wrapper ul li:nth-child(2) {
-      border-right: 1px solid #d4dade; }
-    .section-main .double-section .right-block .content-wrapper ul li:nth-child(3):after {
-      content: none; }
-    .section-main .double-section .right-block .content-wrapper ul li:nth-child(4) {
-      border-right: 1px solid #d4dade; }
-      .section-main .double-section .right-block .content-wrapper ul li:nth-child(4):after {
+      bottom: 0; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(1) {
+      border-left: 1px solid #d4dade; }
+      .section-main .double-section .right-block .content-wrapper ul li:nth-child(1):after {
+        width: 103%; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(2):after {
+      width: 103%;
+      left: 0; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(3) {
+      border-left: 1px solid #d4dade; }
+      .section-main .double-section .right-block .content-wrapper ul li:nth-child(3):after {
         content: none; }
+    .section-main .double-section .right-block .content-wrapper ul li:nth-child(4):after {
+      content: none; }
   footer .top-line .payment-wrapper {
     background-color: #e9edf0; }
     footer .top-line .payment-wrapper .payment-footer {
